style: fix cart items text alignment

--- a/themes/kinder/styles/section.cart.scss
+++ b/themes/kinder/styles/section.cart.scss
@@ -75,11 +75,13 @@
 
                 .info {
                   display: grid;
-                  gap: var(--spacing-4);
+                  gap: var(--spacing-8);
 
                   .title {
-                    overflow-wrap: break-word;
+                    width: fit-content;
+                    text-align: start;
                     white-space: normal;
+                    overflow-wrap: break-word;
                   }
 
                   .price {
